--- a/ExemploComposite/ExemploComposite.csproj
+++ b/ExemploComposite/ExemploComposite.csproj
@@ -37,6 +37,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
@@ -44,6 +45,8 @@
     <Compile Include="composite\Component.cs" />
     <Compile Include="composite\Object.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Composite-Box.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
